<resources>
    <string name="app_name">AuDeliveryApp</string>
    <string name="title">Title</string>
    <string name="app_title">AU DELIVERY</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="setting">Settings</string>
    <string name="dashboard">DashoBoard</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_info">Info</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="signin">SignIn</string>
    <string name="userid">Enter Your Employee Id</string>
    <string name="password">Password</string>
    <string name="forgetpassowrd">Forgot Password</string>
    <string name="login">Login</string>
    <string name="verifyyour">Verify Your Account</string>
    <string name="please_ente">Please enter your pin code we have\nsent you through mail</string>
    <string name="enteryourmobileno">Enter Your Mobile No</string>
    <string name="enteryouphon">Enter Your Phone no where we can send the otp</string>
    <string name="oldpassword">Enter Old Password</string>
    <string name="newpassword">Enter New Password</string>
    <string name="confirm_password">Confirm Passowrd</string>
    <string name="update">Update</string>
    <string name="scheduletime">Schdule TIme</string>
    <string name="product_name">Product Name</string>
    <string name="order">Order</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="total_price">Total Price</string>
    <string name="time">Time</string>
    <string name="pickup">To Pickup - Order # 3142</string>
    <string name="date">date</string>
    <string name="scheduledtime">Scheduled Time</string>
    <string name="pickupbusiness">PickUp: Buisness Details</string>
    <string name="vedorname">Vebdor Name</string>
    <string name="mobilno">Mobile No</string>
    <string name="phonenp">Enter Mobile No</string>
    <string name="newOrder">New Order</string>
    <string name="inprocess">In Process</string>
    <string name="order_history">Order History</string>
    <string name="error_mobile_no">Please Enter Mobile Number</string>
    <string name="err_msg_password">Please Enter Password]</string>
    <string name="error_driver_id">Please Enter Driver Id</string>
    <string name="pleasecheckinternet">Please CHeck Internet Connection</string>
    <string name="name">Name</string>
    <string name="emp_id">emp_id</string>
    <string name="total_order_no">Total Order</string>
    <string name="total_no_orders">Total No Of Orders</string>
</resources>
