<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="@dimen/_80dp"
        android:layout_height="@dimen/_80dp"
        android:layout_margin="@dimen/_30dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/font_30sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProfileEmployeeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:text="@string/emp_id"
        android:textAllCaps="true"
        android:textColor="@color/grey4"
        android:textSize="@dimen/font_20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfileName" />

    <View
        android:id="@+id/viewprofile"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/_4dp"
        android:background="@color/grey3"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@+id/viewprofile">

        <LinearLayout
            android:id="@+id/relativeLayoutRatingDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTotalOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_20sp"
                    android:layout_margin="@dimen/_4dp"
                    android:text="@string/total_order_no" />

                <TextView
                    android:id="@+id/textViewTotalNoOfOrders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_sixteen"
                    android:layout_margin="@dimen/_4dp"
                    android:text="@string/total_no_orders"/>


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>