<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout_changepassword_layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/old_password_layout_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80dp"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginTop="@dimen/_120dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:hint="@string/oldpassword"
        android:textColorHint="@color/grey5"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/font_sixteen" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_textInputLayout_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80dp"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:hint="@string/newpassword"
        android:textColorHint="@color/grey5"
        app:layout_constraintTop_toBottomOf="@+id/old_password_layout_login"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputnewpasswordedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/grey5"
            android:textSize="@dimen/font_sixteen" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80dp"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/grey5"
        app:layout_constraintTop_toBottomOf="@+id/new_password_textInputLayout_login"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/grey5"
            android:textSize="@dimen/font_sixteen" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewUpdatePassword1"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginLeft="@dimen/_60dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/_60dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/update"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
