<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollViewLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_backgroud">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="80dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="22dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/contatinProgresBarLogin"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="@dimen/_60dp"
                android:layout_height="@dimen/_60dp"
                android:visibility="gone"
                android:layout_centerInParent="true" />


            <TextView
                android:id="@+id/textviewsignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/signin"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font_20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmpId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textviewsignin"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10dp"
                android:hint="@string/userid"
                app:hintTextColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTestEmloyeeId"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:inputType="text"
                    android:paddingStart="@dimen/_10dp"
                    android:paddingLeft="@dimen/_10dp"
                    tools:ignore="RtlSymmetry">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutMobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayoutEmpId"
                android:layout_marginBottom="@dimen/_10dp"
                android:hint="@string/phonenp"
                app:hintTextColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingStart="@dimen/_10dp"
                    android:paddingLeft="@dimen/_10dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayoutMobileNo"
                android:hint="@string/password"
                app:hintTextColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassowrd"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_10dp"
                    android:paddingLeft="@dimen/_10dp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayoutPassword"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/forgetpassowrd"
                android:textSize="@dimen/font_sixteen" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_below="@+id/textViewForgotPassword"
                android:layout_margin="@dimen/_20dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_20sp" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>