<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_200dp"
        android:text="@string/forgetpassowrd"
        android:textSize="@dimen/font_20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewForgotDummayText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:gravity="center"
        android:text="@string/enteryouphon"
        android:textSize="@dimen/font_sixteen"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:hint="@string/enteryourmobileno"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotDummayText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone
"
            android:textSize="@dimen/font_sixteen">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewForgotPasswordSubmit"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
         android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_sixteen"
        android:text="@string/forgetpassowrd"
        android:layout_margin="@dimen/_20sdp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutForgetPassword"/>
</androidx.constraintlayout.widget.ConstraintLayout>